Updated the repo to support JDK 17
1. Removed oparent.
2. Supported JDK 17.

Issue-ID: HOLMES-629
Signed-off-by: Guangrong Fu <fu.guangrong@zte.com.cn>
Change-Id: I4635dff74a9654cf02600aba9650a67af1ba818a